Meta to libraries for now

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "monofony/front-meta",
-    "type": "metapackage",
+    "type": "library",
     "license": "MIT",
     "description": "A meta package providing recipes for front",
     "extra": {
